--- a/about.html
+++ b/about.html
@@ -40,10 +40,29 @@
                 <li><a href="contact.html">contact</a></li>
             </ul>
         </div>
-        <div class="menu-icon">
-            <i class="ri-more-2-fill"></i>
-        </div>
+        <div class="menu-icon" id="menu-icon">
+            <a href="#" class="open"><i class="ri-more-2-fill"></i></a>
+            <a href="#" class="close"><i class="ri-close-line"></i></a>
+        </div> 
 
+    </div>
+    <div class="mobile-nav" id="nav">
+        <img src="img/PP-MUSIC.png" alt="" width="100">
+        <ul>
+            
+            <li><a href="index.html" >home</a></li>
+            <li><a href="about.html">about</a></li>
+            <li><a href="lesson.html">lessons</a></li>
+            <li><a href="shows.html">shows</a></li>
+            <li><a href="contact.html">contact</a></li>
+            
+        </ul>
+        <div class="mobile-nav-social">
+            <a href="#"><i class="ri-facebook-circle-fill"></i></a>
+            <a href="#"><i class="ri-instagram-fill"></i></a>
+            <a href="#"><i class="ri-linkedin-box-fill"></i></a>
+            <a href="#"><i class="ri-youtube-fill"></i></a>
+        </div>
     </div>
     <section id="about-Html">
         <div class="bg-color "></div>  
